--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
   "bugs": {
     "url": "https://github.com/pablowbk/chinguV11-prework-tier1/issues"
   },
-  "homepage": "https://github.com/pablowbk/chinguV11-prework-tier1#readme"
+  "homepage": "https://github.com/pablowbk/chinguV11-prework-tier1"
 }
